tests/ui/attributes/expected-word.stderr
error[E0565]: malformed `cold` attribute input
  --> $DIR/expected-word.rs:1:1
   |
LL | #[cold = true]
   | ^^^^^^^------^
   | |      |
   | |      didn't expect any arguments here
   | help: must be of the form: `#[cold]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
