tests/ui/attributes/expected-word.rs
#[cold = true]
//~^ ERROR malformed `cold` attribute input [E0565]
fn main() {}
